--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -4,6 +4,11 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    transition: width 0.3s ease, height 0.3s ease;
+}
+.pokemons:hover{
+    width: 150px;
+    height: 150px;
 }
 
 .normal {
